--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <ul>
 <li><a href="flappy/index.html">flappy birds game</a></li>
-<li><a href="youtube/index.html">Youtube search web app</a></li>
+<li><a href="youtubeviewer/index.html">Youtube search web app</a></li>
 </ul>
